changes for db structure & models represantation
